Update README, commit LICENSE

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "prolific-enhancer",
+    "version": "1.5.0",
     "private": true,
     "scripts": {
         "build": "node esbuild.mjs",
